--- a/assets/css/signin.css
+++ b/assets/css/signin.css
@@ -1,4 +1,4 @@
-html, body {font-family:  "Krub",sans-serif;font-weight:400;height: 100%;}
+html, body {font-family:  "Krub",sans-serif;font-weight:100%;height: 100%;}
 
 body {
   display: -ms-flexbox;
